fix comments part2

--- a/_includes/comments-providers/custom.html
+++ b/_includes/comments-providers/custom.html
@@ -1,4 +1,5 @@
 <!-- start custom comments snippet -->
+{%- if page.key -%}
 <script src="https://utteranc.es/client.js"
     repo="usermark/usermark.github.io"
     issue-term="pathname"
@@ -6,4 +7,5 @@
     crossorigin="anonymous"
     async>
   </script>
+{%- endif -%}
 <!-- end custom comments snippet -->
