--- a/_includes/comments-providers/custom.html
+++ b/_includes/comments-providers/custom.html
@@ -1,11 +1,12 @@
 <!-- start custom comments snippet -->
-{%- if page.key -%}
+{%- if page.key and
+  site.comments.custom.repo -%}
 <script src="https://utteranc.es/client.js"
-    repo="usermark/usermark.github.io"
-    issue-term="pathname"
-    theme="github-light"
-    crossorigin="anonymous"
-    async>
-  </script>
+  repo="{{ site.comments.custom.repo }}"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async>
+</script>
 {%- endif -%}
 <!-- end custom comments snippet -->
