--- a/_includes/comments-providers/custom.html
+++ b/_includes/comments-providers/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom comments snippet -->
-{%- if page.key and
+{%- if page.date and
   site.comments.custom.repo -%}
 <script src="https://utteranc.es/client.js"
   repo="{{ site.comments.custom.repo }}"
